--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ rvm:
   - 2.2.3
 before_script:
   - psql -c 'create database workshops_test;' -U postgres
+  - cp config/database.yml.travis config/database.yml
 addons:
   postgresql: '9.3'
 script: RAILS_ENV=test bundle exec rspec
+before_install:
+  - "gem update --system"
+  - "gem update bundler"
+bundler_args: ''
