--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 rvm:
   - 2.2.3
 before_script:
-  - psql -c 'create database workshops_test;' -U workshops
+  - psql -c 'create database workshops_test;' -U postgres
   - cp config/database.yml.travis config/database.yml
 addons:
   postgresql: '9.3'
