--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ rvm:
 before_script:
   - psql -c 'create database workshops_test;' -U postgres
   - cp config/database.yml.travis config/database.yml
+  - RAILS_ENV=test bundle exec rake db:restart
   - RAILS_ENV=test bundle exec rake db:migrate
 addons:
   postgresql: '9.3'
